--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,71 @@
     background-color: #1F2937;
     display:flex;
     justify-content: space-between;
+    padding: 10px;
+    
 
+}
+ul{
+    list-style: none;
+    display: flex;
+    margin:0;
+     padding: 0;
+    gap:10px;
+}
+
+.links{
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    flex-direction: row;
+    padding: 10px;
+    
 }
 .main{
     background-color: #1F2937;
     display:flex;
     justify-content: center;
 
+}
+.info{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    margin:0px;
+    flex:1;
+
+}
+.info-header{
+    padding: 0px;
+}
+.info-container{
+    display: flex;
+    gap:30px;
+    margin: 10px 50px;
+
+}
+.block{
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    
+}
+.block img{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius:5px;
+    border:1px solid #3882f6;
+    margin: 0px;
+    width: 100px;
+    height: 100px; 
+
+}
+.block p{
+    text-align: center;
+    max-width: 100px;
+    font-size: 12px;
 }
 .call{
     background-color: #3882f6;
@@ -50,14 +108,11 @@
     
 }
 .footer{
-    /* background-color: #e5e7eb; */
     display:flex;
     flex:0;
-    align-content: flex-end;
+    align-content: stretch;
     justify-content: center;
     padding:30px;
-    
-
 }
 
 body{
@@ -73,7 +128,8 @@ body{
     background-color: #e5e7eb;
     flex-direction: column;
     align-items: center;
-    
+    flex:0;
+    justify-items: flex-end;
 }
 
 .quote{
