--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,12 @@
     background-color: #1F2937;
     display:flex;
     justify-content: space-between;
-    padding: 10px;
-    
+    align-items: center;
+    padding: 10px; 
+}
 
+.header img{
+    width:20%;
 }
 ul{
     list-style: none;
@@ -20,27 +23,82 @@ ul{
     align-self: center;
     flex-direction: row;
     padding: 10px;
+    color: #e5e7eb;
     
 }
-.main{
+.hero{
     background-color: #1F2937;
     display:flex;
     justify-content: center;
+    color: #e5e7eb;
+    padding:  60px 10%;
+    padding-top: 10px;
+}
+.hero img{
+    height: 160px;
+    width:290px;
+    background-color:#e5e7eb;
+    border-radius:10px;
+    border:1px solid #1F2937;
+    align-self: center;
+}
+.hero-text{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+    text-align: left;
+    border:1px solid #1F2937;
+    text-overflow: ellipsis;
+}
+.hero-text h2{
+    margin: 0px ;
+}
+.hero-text button{
+    background-color: #3882f6;
+    border-radius:5px;
+    border:1px solid #1F2937;
+    color: white;
+    padding:5px 15px;
+    margin: 0px;
+    height:fit-content;
+    
 
 }
-.info{
+.why{
     display:flex;
     flex-direction: column;
     align-items: center;
     padding: 0px;
     margin:0px;
     flex:1;
+    color:#1F2937
 
 }
-.info-header{
+.why h2{
     padding: 0px;
 }
-.info-container{
+.why-container{
+    display: flex;
+    gap:30px;
+    margin: 10px 50px;
+
+}
+.how{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    margin:0px;
+    flex:1;
+    background-color: #e4daa1;
+    color:#1F2937
+
+}
+.how h2{
+    padding: 0px;
+}
+.how-container{
     display: flex;
     gap:30px;
     margin: 10px 50px;
@@ -55,17 +113,17 @@ ul{
 .block img{
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     border-radius:5px;
-    border:1px solid #3882f6;
+    border:1px solid #1F2937;
+    background-color:#e5e7eb;
     margin: 0px;
-    width: 100px;
-    height: 100px; 
+    width: 150px;
+    height: 150px; 
 
 }
 .block p{
     text-align: center;
-    max-width: 100px;
+    max-width: 150px;
     font-size: 12px;
 }
 .call{
@@ -121,25 +179,31 @@ body{
     color: aqua;
     padding: 0;
     margin:0;
+    text-align:center;
+    
 }
 
 .quote-block{
     display: flex;
+    font-family: serif;
     background-color: #e5e7eb;
     flex-direction: column;
-    align-items: center;
+    /* font-weight: lighter; */
+    /* align-items: center; */
     flex:0;
+    padding: 0px 200px;
     justify-items: flex-end;
 }
 
 .quote{
-    max-width: 600px;
+    
     font-size: 36px;
     font-style: italic;
-    font-weight:lighter;
+    font-weight: 100;
     color: #1F2937;
     padding-top:50px;
     margin: 0px;
+    text-align: center;
     flex:0;
     
 }
@@ -147,8 +211,8 @@ body{
 .quoter{
     flex:0;
     padding-bottom:50px;
-    margin-right: 300px;
-    align-self: flex-end;
+    /* margin-right: 300px; */
+    text-align:right;
     font-weight: bold;
     color: #1F2937;
     
