--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ ul{
 .hero img{
     height: auto;
     width:60%;
-    max-width: 290px;
+    max-width: 30vw;
     background-color:#e5e7eb;
     border-radius:10px;
     border:1px solid #1F2937;
@@ -73,10 +73,10 @@ ul{
 .why{
     display:flex;
     flex-direction: column;
+    padding: 0;
+    margin:0;
     align-items: center;
-    padding: 0px;
-    margin:0px;
-    flex:1;
+    max-height:5%;
     color:#1F2937;
 
 }
@@ -86,8 +86,9 @@ ul{
 }
 .why-container{
     display: flex;
-    gap:30px;
+    gap:5%;
     margin: 10px 50px;
+    justify-content: space-around;
 
 }
 .how{
@@ -107,7 +108,7 @@ ul{
 }
 .how-container{
     display: flex;
-    gap:30px;
+    gap:5%;
     margin: 10px 50px;
 
 }
@@ -124,15 +125,17 @@ ul{
     border:1px solid #1F2937;
     background-color:#e5e7eb;
     margin: 0px;
-    aspect-ratio: 1/1;
+    object-fit: cover;
+    object-position: 50% 10%;
+    aspect-ratio: 1;
     width:100%;
-    max-width:150px;   
+    max-width:20vw;   
     
    
 }
 .block p{
     text-align: center;
-    max-width: 150px;
+    max-width: 20vw;
     font-size: 2vw;
 }
 .call{
@@ -140,15 +143,18 @@ ul{
     border-radius:5px;
     border:1px solid white;
     display: flex;
-    padding: 5% 5%;
+    padding: 2% 3%;
     justify-content: space-between;
     color:#e5e7eb;
+    max-height:5%;
 
 }
 .message-block{
     display: flex;
     flex-direction: column;
+    
     padding-right: 10%;
+    /* max-height: 5%; */
 }
 
 .message-bold{
@@ -164,6 +170,7 @@ ul{
 .message-block p{
     margin: 0px;
     padding: 5px 0;
+    
 }
 .footer button{
     background-color: #3882f6;
@@ -183,8 +190,29 @@ ul{
     flex:0;
     align-content: stretch;
     justify-content: center;
-    padding:5% 0;
     
+    padding: 2%;
+    
+    
+}
+
+.disclaimer{
+    margin:0;
+    flex:0;
+    align-content: stretch;
+    justify-content: center;
+    background-color: #e5e7eb;
+    
+    
+}
+.disclaimer p{
+    justify-content: flex-end;
+    padding-top: 0%;
+    font-size: 1vw;
+    margin: 0%;
+    color:#1F2937;
+    flex:1;
+    text-align: right;
 }
 
 body{
@@ -205,17 +233,17 @@ body{
     /* font-weight: lighter; */
     /* align-items: center; */
     flex:0;
-    padding: 0px 20%;
+    padding: 0 10%;
     justify-items: flex-end;
 }
 
 .quote{
     
-    font-size: 4vw;
+    font-size: 3vw;
     font-style: italic;
     font-weight: 100;
     color: #1F2937;
-    padding:10% 0;
+    padding-top:10%;
     margin: 0px;
     text-align: center;
     flex:0;
@@ -224,10 +252,12 @@ body{
 
 .quoter{
     flex:0;
+    font-size: 2vw;
+    padding-top: 0%;
     padding-bottom:10%;
-    /* margin-right: 300px; */
+    
     text-align:right;
-    margin: 0%;
+    
     font-weight: bold;
     color: #1F2937;
     
