--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@
 
 .header img{
     width:20%;
+    padding-left: 0%;
+    justify-self: flex-start;
 }
 ul{
     list-style: none;
@@ -26,6 +28,7 @@ ul{
     padding: 10px;
     color: #e5e7eb;
     font-size: 2vw;
+    margin-right:5%;
     gap:10%;
     
 }
@@ -34,7 +37,7 @@ ul{
     display:flex;
     justify-content: center;
     color: #e5e7eb;
-    padding:  60px 5%;
+    padding:  60px 10%;
     padding-top: 10px;
 }
 .hero img{
@@ -42,7 +45,7 @@ ul{
     width:60%;
     max-width: 30vw;
     background-color:#e5e7eb;
-    border-radius:10px;
+    border-radius:5px;
     border:1px solid #1F2937;
     align-self: center;
 }
@@ -63,13 +66,13 @@ ul{
 }
 .hero-text button{
     background-color: #3882f6;
-    border-radius:5px;
+    border-radius:7px;
     border:1px solid #1F2937;
     color: white;
-    padding:5px 15px;
+    padding:10px 20px;
     margin: 0px;
     height:fit-content;
-    font-size: 2vw;
+    font-size: 1.5vw;
 
 }
 .why{
@@ -142,10 +145,10 @@ ul{
 }
 .call{
     background-color: #3882f6;
-    border-radius:5px;
+    border-radius:10px;
     border:1px solid white;
     display: flex;
-    padding: 2% 3%;
+    padding: 2% 5%;
     justify-content: space-between;
     color:#e5e7eb;
     max-height:5%;
@@ -154,9 +157,7 @@ ul{
 .message-block{
     display: flex;
     flex-direction: column;
-    
-    padding-right: 10%;
-    /* max-height: 5%; */
+    max-height: 5%;
 }
 
 .message-bold{
@@ -171,12 +172,12 @@ ul{
 }
 .message-block p{
     margin: 0px;
-    padding: 5px 0;
+    padding: 2px 0;
     
 }
 .footer button{
     background-color: #3882f6;
-    border-radius:5px;
+    border-radius:10px;
     border:1px solid white;
     color: white;
     padding:1vw 2vw;
@@ -192,7 +193,6 @@ ul{
     flex:0;
     align-content: stretch;
     justify-content: center;
-    
     padding: 2%;
     
     
